--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.0
   sqflite: ^2.2.6
+  sqflite_common_ffi: ^2.2.2
 
 dev_dependencies:
   flutter_test:
