--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   json_annotation: ^4.8.0
   sqflite: ^2.2.6
   sqflite_common_ffi: ^2.2.2
+  build_runner: ^2.3.3
+  build: ^2.3.1
 
 dev_dependencies:
   flutter_test:
@@ -52,7 +54,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  build_runner: ^2.3.3
   json_serializable: ^6.6.1
 
 # For information on the generic Dart part of this file, see the
