--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   sqflite_common_ffi: ^2.2.2
   build_runner: ^2.3.3
   build: ^2.3.1
+  go_router: ^6.5.5
 
 dev_dependencies:
   flutter_test:
