--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   build_runner: ^2.3.3
   build: ^2.3.1
   go_router: ^6.5.5
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
