--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   go_router: ^6.5.5
   get_it: ^7.2.0
   go_router_builder: ^1.2.0
+  mockito: ^5.4.0
 
 dev_dependencies:
   flutter_test:
